--- a/.github/workflows/build-latest.yml
+++ b/.github/workflows/build-latest.yml
@@ -19,14 +19,14 @@ jobs:
       matrix:
         image_name:
           - base
-          - silverblue
-          - kinoite
-          - sway-atomic
-          - budgie-atomic
-          - cosmic-atomic
+          # - silverblue
+          # - kinoite
+          # - sway-atomic
+          # - budgie-atomic
+          # - cosmic-atomic
         image_variant:
           - main
-          - nvidia
+          # - nvidia
     with:
       image_name: ${{ matrix.image_name }}
       image_variant: ${{ matrix.image_variant }}
